# flow-match

./: .gitignore  PRD.me  README.md  environment.yml  failures.jsonl  pyproject.toml  requirements.txt  setup.bat  setup.sh  test_l4_configs.bat
.claude/: launch.json
data/: filter_log.csv  splits.json
notebooks/: visualize.ipynb
scripts/: blind_dock.py  check_processed_sample.py  download_pdbbind_core.py  eval_chemistry_metrics.py  eval_etkdg_baseline.py  eval_model_rmsd.py  eval_posebusters.py  preprocess.py  verify_equivariance.py
src/config/: __init__.py  profiles.py
src/data/: dataset.py  featurize.py
src/models/: egnn.py  flow_model.py
src/training/: metrics.py  train.py
tests/: conftest.py  test_equivariance.py  test_eval_pipeline.py  test_featurize.py  test_flow.py  test_metrics.py
